Replace deprecated optional dependencies with `@OptionalExtension`
This requires a new dependency to the variant plugin.